Add advanced features: Streamlit demo, data augmentation, uncertainty quantification, ONNX export
New features:
- Interactive Streamlit web app (app.py) with real-time thermal prediction
- Data augmentation pipeline (rotation, flip, noise, power scaling)
- MC Dropout uncertainty quantification with confidence maps
- Design recommendations based on thermal analysis
- ONNX export for production deployment (27ms inference)

Files added:
- app.py: Full-featured Streamlit web interface
- src/training/augmentation.py: ThermalAugmentation classes
- src/inference/uncertainty.py: MCDropoutPredictor for uncertainty
- scripts/export_onnx.py: ONNX export utility
- models/pcb_thermal.onnx: Exported model (16.5 MB)

Updated README with new features and roadmap

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Pillow>=10.0.0
 # Visualization
 matplotlib>=3.7.0
 seaborn>=0.12.0
+plotly>=5.18.0
 
 # PCB/Gerber parsing
 pcb-tools>=0.1.6
@@ -25,6 +26,13 @@ pcb-tools>=0.1.6
 fastapi>=0.100.0
 uvicorn>=0.23.0
 python-multipart>=0.0.6
+
+# Web UI
+streamlit>=1.28.0
+
+# ONNX (production deployment)
+onnx>=1.14.0
+onnxruntime>=1.16.0
 
 # Utilities
 tqdm>=4.65.0
